updated footer and main

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
     <a class="skip-main" href="#main">Skip to main content</a>
     <nav aria-label="main navigation bar of page" role="navigation" class="grid-nav template-style">
         <ul>
-            <li><a href="#header">header</a></li>
-            <li><a href="#main">content</a></li>
-            <li><a href="#footer">footer</a></li>
+            <li>logo</li>
+            <li><a href="#footer">settings button</a></li>
         </ul>
     </nav>
 
@@ -37,7 +36,7 @@
 
     <header role="banner" id="header">
         <h1>MUVI</h1>
-        <h2>this is a template page</h2>
+        <h2>Enjoy your favourite music and videos in one place.</h2>
     </header>
 
 
@@ -46,7 +45,6 @@
 
     <main role="main" id="main">
         <section role="region" aria-label="label this region for aria">
-            <h2>Content</h2>
             <form action="">
                 <input type="text">
                 <button>Music</button>
@@ -60,23 +58,7 @@
 
     <!-- footer for placing your copyright and socialmedia icons as well as your contact info -->
     <footer role="contentinfo" id="footer">
-        <nav role="navigation">
-            <ul>
-                <h2>copyright</h2>
-                <li><a href="#">item 1</a></li>
-                <li><a href="#">item 2</a></li>
-                <li><a href="#">item 3</a></li>
-            </ul>
-        </nav>
-
-        <nav role="navigation">
-            <ul>
-                <h2>social-media</h2>
-                <li><a href="#">item 1</a></li>
-                <li><a href="#">item 2</a></li>
-                <li><a href="#">item 3</a></li>
-            </ul>
-        </nav>
+  
 
 
     </footer>
